url-shortener/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: url-shortener
  namespace: url-shortener

spec:

  replicas: 1

  selector:
    matchLabels:
      app: url-shortener

  template:

    metadata:
      labels:
        app: url-shortener

    spec:

      containers:

      - name: url-shortener

        image: url-shortener:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 8000

        livenessProbe:
          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 5
          periodSeconds: 5
