url-shortener/k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: url-shortener-service
  namespace: url-shortener

spec:

  selector:
    app: url-shortener

  ports:

  - port: 80
    targetPort: 8000

  type: NodePort
